<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText android:id="@+id/username" android:hint="Username"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <EditText android:id="@+id/password" android:hint="Password" android:inputType="textPassword"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <Button android:id="@+id/login_button" android:text="Login"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <TextView android:id="@+id/goto_register" android:text="Don't have an account? Register"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark" />
</LinearLayout>